include_directories("${CMAKE_CURRENT_LIST_DIR}/../3rdParty/")

add_library(raytracelib 
    aabb.h
    aabb.cpp
    bvh_node.h
    bvh_node.cpp
    color.h 
    ray.h 
    types.h
    types.cpp
    image_buffer.h
    image_buffer.cpp
    debug_utils.h
    debug_utils.cpp
    hittable.h
    hittable.cpp
    sphere.h
    sphere.cpp
    hittable_list.h
    hittable_list.cpp
    camera.h
    camera.cpp
    material.h
    material.cpp
    scene.h
    scene.cpp
    raytrace.h
    raytrace.cpp
    texture.h
    texture.cpp
    stb_image.h
    stb_image_resize.h
    stb_image_include.h
    perlin.h
    perlin.cpp
    rect.h
    rect.cpp
    box.h
    box.cpp
    instance.h
    instance.cpp
    constant_medium.h
    constant_medium.cpp
)